--- a/etc/PosHeuristics.ipynb
+++ b/etc/PosHeuristics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "['N', 'V']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "['V', 'N']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "['V', 'V']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "['N', 'N']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "['N', None]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "VV        123   82  205  0.400000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -356,6 +356,328 @@
    ],
    "source": [
     "print(tabulate(stat_word_struct, headers=stat_word_struct.columns, floatfmt=[\".0f\"] * 4 + [\".2f\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use CWN to determine POS structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from CwnGraph import CwnBase\n",
+    "from itertools import chain\n",
+    "cwn = CwnBase()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unk_structs = word_struct.loc[word_struct.struct==\"--\", :].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def query_word_pos_cwn(word):\n",
+    "    if len(word) > 1:\n",
+    "        poses = [query_word_pos_cwn(w) for w in word]\n",
+    "        if any([x==\"-\" for x in poses]):\n",
+    "            return \"--\"\n",
+    "        else:\n",
+    "            return \"\".join(poses)\n",
+    "    else:\n",
+    "        senses = list(chain.from_iterable(x.senses for x in cwn.find_lemma(word)))\n",
+    "        n_N = sum(1 for x in senses if x.pos.startswith(\"N\"))\n",
+    "        n_V = sum(1 for x in senses if x.pos.startswith(\"V\"))\n",
+    "        if n_N > n_V:\n",
+    "            return \"N\"\n",
+    "        elif n_V > n_N:\n",
+    "            return \"V\"\n",
+    "        else:\n",
+    "            return \"-\"    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cwn_struct = unk_structs.lemma.apply(query_word_pos_cwn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VV    146\n",
+       "NN     85\n",
+       "VN     48\n",
+       "NV     29\n",
+       "--     14\n",
+       "Name: lemma, dtype: int64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cwn_struct.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unk_structs[\"cwn_struct\"] = cwn_struct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_struct_m = word_struct.merge(unk_structs[[\"lemma\", \"cwn_struct\"]], left_on=\"lemma\", right_on=\"lemma\", how=\"left\")\n",
+    "word_struct_m.loc[word_struct.struct==\"--\", \"struct\"] = word_struct_m.loc[word_struct.struct==\"--\", \"cwn_struct\"]\n",
+    "word_struct_m.drop(\"cwn_struct\", axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_struct_m.to_csv(\"../data/annot_word_struct/annot_word_struct.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>response</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>prop</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>struct</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>--</th>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.357143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NN</th>\n",
+       "      <td>486</td>\n",
+       "      <td>337</td>\n",
+       "      <td>823</td>\n",
+       "      <td>0.409478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NV</th>\n",
+       "      <td>174</td>\n",
+       "      <td>102</td>\n",
+       "      <td>276</td>\n",
+       "      <td>0.369565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VN</th>\n",
+       "      <td>236</td>\n",
+       "      <td>115</td>\n",
+       "      <td>351</td>\n",
+       "      <td>0.327635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VV</th>\n",
+       "      <td>205</td>\n",
+       "      <td>146</td>\n",
+       "      <td>351</td>\n",
+       "      <td>0.415954</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "response    0    1  sum      prop\n",
+       "struct                           \n",
+       "--          9    5   14  0.357143\n",
+       "NN        486  337  823  0.409478\n",
+       "NV        174  102  276  0.369565\n",
+       "VN        236  115  351  0.327635\n",
+       "VV        205  146  351  0.415954"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_struct_stat = word_struct_m.groupby([\"struct\", \"response\"]).size().reset_index()\n",
+    "word_struct_stat = word_struct_stat.pivot(index=\"struct\", columns=\"response\")\n",
+    "word_struct_stat.columns = word_struct_stat.columns.droplevel(0)\n",
+    "word_struct_stat[\"sum\"] = word_struct_stat.sum(1)\n",
+    "word_struct_stat[\"prop\"] = word_struct_stat.iloc[:,1] / word_struct_stat[\"sum\"]\n",
+    "word_struct_stat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# After manual resolved"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>response</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>prop</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>struct</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NN</th>\n",
+       "      <td>487</td>\n",
+       "      <td>337</td>\n",
+       "      <td>824</td>\n",
+       "      <td>0.408981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NV</th>\n",
+       "      <td>174</td>\n",
+       "      <td>102</td>\n",
+       "      <td>276</td>\n",
+       "      <td>0.369565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VN</th>\n",
+       "      <td>237</td>\n",
+       "      <td>116</td>\n",
+       "      <td>353</td>\n",
+       "      <td>0.328612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VV</th>\n",
+       "      <td>212</td>\n",
+       "      <td>150</td>\n",
+       "      <td>362</td>\n",
+       "      <td>0.414365</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "response    0    1  sum      prop\n",
+       "struct                           \n",
+       "NN        487  337  824  0.408981\n",
+       "NV        174  102  276  0.369565\n",
+       "VN        237  116  353  0.328612\n",
+       "VV        212  150  362  0.414365"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_struct = pd.read_csv(\"../data/annot_word_struct/annot_word_struct_manual.csv\")\n",
+    "word_struct_stat = word_struct.groupby([\"struct\", \"response\"]).size().reset_index()\n",
+    "word_struct_stat = word_struct_stat.pivot(index=\"struct\", columns=\"response\")\n",
+    "word_struct_stat.columns = word_struct_stat.columns.droplevel(0)\n",
+    "word_struct_stat[\"sum\"] = word_struct_stat.sum(1)\n",
+    "word_struct_stat[\"prop\"] = word_struct_stat.iloc[:,1] / word_struct_stat[\"sum\"]\n",
+    "word_struct_stat"
    ]
   },
   {
