--- a/etc/SenseEmbed.ipynb
+++ b/etc/SenseEmbed.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "過             12  0.166667         6  0.166667"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
        "行              4  0.500000        13  0.076923"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,16 +613,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x207721ddf98>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x25e5e70e470>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        "28827"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -764,14 +764,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['頂嘴', '核定', '歡暢', '鳳', '秋', '恐', '這', '遺址', '申訴', '慢慢', '我國', '喜歡', '底', '摸', '女兒', '頒給', '花園', '飯', '掉', '力', '盼', '辦法', '政', '縣', '古典', '整整', '國寶', '沒有', '近', '名氣', '整', '精', '線', '遇', '觸', '弱', '大早', '惡化', '憂悶', '不忠', '他', '美國', '武松', '工會', '析', '優勢', '連線', '便', '搖', '手法', '義', '面積', '累積', '早晨', '鼓勵', '思念', '那邊', '畏懼', '紐', '答覆', '毛', '單純', '懶得', '心醉', '陽', '記過', '廳', '區', '婦女', '別', '申', '觀音', '稱為', '諸', '交', '授予', '生存', '捐出', '古', '指出', '湯匙', '專門', '租', '溪', '遠大', '漂', '叉', '寄給', '可見', '注意', '國小', '簡稱', '從業', '劇', '舊', '開戰', '政大', '角色', '電路', '依賴', '工程', '揮', '聖火', '妙', '反感', '頒獎', '個人', '有志', '載明', '苦', '論', '遊', '推動', '社', '化', '調', '允許', '染色', '碰', '堅持', '協助', '蘭嶼', '演', '官員', '編', '宏', '藥物', '凍原', '鬆', '指', '岸', '解決', '光電', '保守', '分隔', '意外', '苔原', '攤', '筆', '崩解', '相較', '亞', '怨', '脈', '糕點', '發掘', '國防', '定值', '畢業', '兔子', '誘', '本錢', '開花', '聲浪', '休息', '小', '找到', '轟炸', '氣憤', '春', '容易', '賜給', '排行', '爽', '顧客', '烏龜', '肯定', '周', '故意', '滿意', '東南', '火力', '孟', '氣', '來信', '超越', '制', '造勢', '寫給', '找', '電動', '才', '這裏', '鋼琴', '程式', '大半', '叉子', '狀況', '容量', '充滿', '半', '牛', '備', '棍子', '似', '距離', '工廠', '主角', '去除', '民意', '入迷', '半身', '為甚', '口角', '嚇', '皮膚', '所及', '扶', '畢', '客人', '定論', '房子', '如此', '試', '學術', '午', '殘', '意', '也', '定', '恐慌', '喜', '親生', '差', '南', '外', '他們', '擋', '主席', '過後', '採', '夏', '樹林', '呼吸', '較多', '化為', '陷入', '強烈', '大量', '反', '架空', '任意', '施肥', '源', '她們', '領先', '力爭', '驚恐', '弟兄', '水準', '女生', '種', '嘴脣', '身後', '豐富', '錄音', '杯子', '誘發', '吾人', '資', '遷', '確實', '民', '忽', '讚', '伍', '年紀', '拖', '決心', '抖出', '厚', '隔', '雨', '拖延', '障礙', '試試', '協約', '持續', '參', '筆觸', '維繫', '集', '許多', '技', '銀', '油船', '忽略', '唸', '賤', '之後', '程']\n"
+      "['忍心', '子宮', '國會', '兒子', '好好', '去年', '缺乏', '房', '等同', '國人', '杓', '最佳', '唱', '喜', '車站', '結實', '身為', '驗', '蓄', '防', '濃', '冷', '盜', '賦', '縣', '銀行', '沙沙', '特色', '及', '如', '過年', '維', '女兒', '懼', '歸', '爺爺', '社', '覺', '依', '俗稱', '協', '以前', '主', '遞', '有的', '漂', '解決', '提出', '逗留', '那邊', '能', '糾', '失之', '木', '時值', '湯匙', '圖', '物種', '快速', '站穩', '國外', '妻子', '會員', '險', '容', '除', '定案', '功', '獎狀', '定律', '購', '棍', '記住', '己', '得', '追', '兒童', '律', '自甘', '嫌疑', '裝箱', '咱家', '某些', '名聲', '金額', '午後', '誤會', '夏娃', '而', '遭到', '喪失', '殺', '解雇', '煮熟', '沙', '設', '核定', '半點', '送', '做出', '感到', '傾心', '套', '描述', '不行', '暢', '觀', '藝術', '狹', '萬一', '稱為', '主治', '福', '適用', '竟', '四周', '停機', '天空', '有些', '童', '哥哥', '建造', '贈', '離開', '促進', '休息', '美好', '解毒', '彼', '究', '予', '相信', '健全', '精品', '困境', '禮品', '塞尚', '了解', '親', '什麼', '您們', '織', '後者', '些', '遞給', '家', '後來', '花兒', '匹', '悅', '那裏', '跑掉', '分隔', '隔壁', '特定', '連戰', '矛盾', '隆', '獎', '薄', '蔚為', '倫', '允許', '論述', '有趣', '廢', '諸', '剖析', '不盡', '詞典', '維護', '賣', '留', '女', '爸', '國防', '途', '推測', '珍', '鈞座', '誘發', '整容', '錯亂', '辭行', '制伏', '飯店', '觀點', '電氣', '進去', '子女', '推移', '包容', '影', '油污', '銀', '次', '亂', '週', '慣', '記錄', '色彩', '那', '酒令', '到', '身', '接任', '提交', '大量', '內容', '客戶', '期盼', '惹', '財產', '盾', '欲', '種類', '溶', '給予', '陷入', '歷史', '小姐', '竟是', '線', '憤', '階', '需', '結束', '刑', '期末', '授予', '底', '那時', '掘', '升任', '明', '發出', '無意', '漫', '後面', '簡單', '出', '掛勾', '相等', '撒嬌', '求', '末', '讀書', '贏得', '娃', '敝國', '堅持', '業界', '該', '兄', '國寶', '割', '宏', '大溪', '怎麼', '以降', '春季', '哪裡', '兒時', '摸', '不少', '縱容', '效', '許', '同時', '典雅', '可資', '困難', '暢快', '狀況', '占', '期求', '事', '杯子', '商業', '超過', '維生', '涉嫌', '招', '作', '申', '索', '難怪', '技術']\n"
      ]
     }
    ],
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
        "11514"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +997,7 @@
        "array([0.00240169, 0.35021109])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
        "(-0.1, 0.8)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1094,7 +1094,7 @@
    ],
    "source": [
     "BW = 0.03\n",
-    "plt.figure(figsize=(6,4), dpi=120)\n",
+    "fig = plt.figure(figsize=(6,4), dpi=120)\n",
     "sns.distplot(sense_pval, hist=False, kde=True, kde_kws={'shade': True, \"bw\": BW}, label=\"Senses\")\n",
     "sns.distplot(perm_pval, hist=False, kde=True, kde_kws={'shade': True, \"bw\": BW}, label=\"Permutations\")\n",
     "sns.distplot(rand_pval, hist=False, kde=True, kde_kws={'shade': True, \"bw\": BW}, label=\"Random\")\n",
@@ -1106,6 +1106,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.savefig(\"../data/model_sense_embed/simulation.png\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1114,12 +1123,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Errno 2] No such file or directory: '../data/model_sense_linkage/sense_link_data.pkl'\n"
+     ]
+    }
+   ],
    "source": [
-    "SENSE_LINK_PATH = \"../data/sense_link_data.pkl\"\n",
+    "SENSE_LINK_PATH = \"../data/model_sense_linkage/sense_link_data.pkl\"\n",
+    "SENSE_LINK_FULL = \"../data/model_sense_linkage/sense_link_full_data.pkl\"\n",
     "sense_link_data = []\n",
+    "sense_link_full = []\n",
     "try:\n",
     "    with open(SENSE_LINK_PATH, \"rb\") as fin:\n",
     "        sense_link_data = pickle.load(fin)\n",
@@ -1131,26 +1150,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5954df0efad24e66ad945def8e72cfd9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[憂悶]: expected a non-empty list of Tensors\n",
+      "[憂愁]: expected a non-empty list of Tensors\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# this block took ~70 seconds in a i7-desktop\n",
     "if RUN_LINKSENSE:\n",
     "    for idx, row in tqdm(hyper_annot_data.iterrows()):\n",
     "        try:\n",
-    "            links = senseutils.link_senses(row.lemma, row.c2, cwn, sense_embed, n=10)\n",
+    "            links = senseutils.link_senses(row.lemma, row.c2, cwn, sense_embed, n=10)            \n",
     "            (best_1, best_2), score = links[0]        \n",
-    "            sense_link_data.append((row.lemma, best_1.id, best_1.definition, best_2.id, best_2.definition))    \n",
+    "            sense_link_full.append(links)\n",
+    "            sense_link_data.append((row.lemma, best_1.id, best_1.definition, best_2.id, best_2.definition))                \n",
     "        except Exception as ex:\n",
     "            print(f\"[{row.lemma}]: {ex}\")\n",
     "    with open(SENSE_LINK_PATH, \"wb\") as fout:\n",
-    "        pickle.dump(sense_link_data, fout)"
+    "        pickle.dump(sense_link_data, fout)\n",
+    "    with open(SENSE_LINK_FULL, \"wb\") as fout:\n",
+    "        pickle.dump(sense_link_full, fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1350,7 @@
        "一律     09047003  由立法機關制定，有強制效力的行為規範。  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
